compiler/testData/diagnostics/tests/DeferredTypes.kt
// IGNORE_IF_NEW_INFERENCE_ENABLED

interface T {
  val a = <!PROPERTY_INITIALIZER_IN_INTERFACE!><!UNRESOLVED_REFERENCE!>Foo<!>.<!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>bar<!>()<!>
}
